add shop and special events sections to home with responsiveness

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   </head>
   <body>
     <nav>
+      <h1>WATER SPORT</h1>
+      <hr />
       <ul class="links">
         <li>Home</li>
         <li>Shop</li>
@@ -127,6 +129,57 @@
               </ul>
               <button>Book Now</button>
             </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="products">
+        <h1>OUR STORE</h1>
+        <div class="wrapper">
+          <div class="product">
+            <img src="./images/inflatable.jpg" alt="" />
+            <span class="description">Inflatable, Mask, Scuba</span>
+            <h2>Inflatable Summber Pool</h2>
+            <span class="price">₹2500</span>
+          </div>
+          <div class="product">
+            <img src="./images/tube.jpg" alt="" />
+            <span class="description">Item, Sport, Swimming</span>
+            <h2>Summer Set</h2>
+            <span class="price">₹500</span>
+          </div>
+          <div class="product">
+            <img src="./images/scuba_fins.jpg" alt="" />
+            <span class="description">Inflatable, Mask, Scuba</span>
+            <h2>Yellow Scuba Fins</h2>
+            <span class="price">₹750</span>
+          </div>
+          <div class="product">
+            <img src="./images/scuba_mask.jpg" alt="" />
+            <span class="description">Item, Sport, Swimming</span>
+            <h2>Scuba Diving Mask Snorkel Set</h2>
+            <span class="price">₹500</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="events">
+        <h1>SPECIAL EVENTS</h1>
+        <div class="wrapper">
+          <div class="event">
+            <div class="left">
+              <h3 class="date">July 10, 2026</h3>
+              <img src="./images/weekend.jpg" alt="" />
+              <div class="content">
+                <h2>Happy Weekends</h2>
+                <span>Time: 08:00 - 17:00</span>
+                <span>Const: ₹250</span>
+                <span class="description"
+                  >Are you ready for the best family weekend?</span
+                >
+              </div>
+            </div>
+            <button>MORE INFO</button>
           </div>
         </div>
       </div>
