fix cost spellingin events

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <div class="content">
                 <h2>Happy Weekends</h2>
                 <span>Time: 08:00 - 17:00</span>
-                <span>Const: ₹250</span>
+                <span>Cost: ₹250</span>
                 <span class="description"
                   >Are you ready for the best family weekend?</span
                 >
